feat: AI 통신 개발 기능 추가